# whisperX

./: pyproject.toml  requirements.txt  setup.py
whisperx/: __init__.py  __main__.py  asr.py
